--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,21 @@
 
     h1{
         color:blue;
+        text-align: center;
+    }
+    h2{
+        color:green;
+        font-style: bold;
+        text-align: center;
+    }
+    p{
+        font-family: sans-serif;
+        color: teal;
+        background-color:white;
+        font-style: italic;
+        font-family: 'Lucida Sans';
+        line-height: inherit;
+    }
+    ul{
+        line-break: 40px;
     }
